
2008-01-15  Ingo Renner  <ingo@typo3.org>

	* added feature #5536: Some Hooks for tslib_content
	* added feature #7161: create a shortcut manager to delegate calls to create a new shortcut to the right target
	* added the shortcut menu, part of the cleaner backend project

2008-01-15  Benjamin Mack  <mack@xnos.org>

	* (bugfix) #2936, 5613: Improvements to clipboard copy/move selection (by Bernhard Kraft)
	* (cleanup) #6958: added comments in t3lib_htmlmail.php, used foreach and some better variable namings (thanks to Stefano Cecere and Steffen Kamper)
	* (bugfix) #5482:t3lib_htmlmail.php is now initialized with empty variables
	* (bugfix) Fixed #7148 - CSV Export Improvements in List Module

2008-01-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #5660: Wrong HTTP Header on Domain Redirect (fix by Jeff Segars)

2008-01-15  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #7122: IRRE - Implement TYPO3AJAX handler for Inline Relational Record Editing
	* (feature) Added feature #2797: Add return value to t3lib_htmlmail::send (thanks to Steffen Kamper)
	* (minor) Fixed bug #7126: IRRE - Child records are shown floated and not as blocks in Safari
	* (cleanup) Removed typo3/alt_doc_ajax.php (former AJAX handler of IRRE)
	* (feature) Added feature #5899: Notify user where required elements are nested in IRRE or Tabs
	* Updated NEWS.txt

2008-01-14  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7138: RTE is not rendered in Tabs
	* Added feature #6845: Make preserving DIV sections a configurable RTE processing option

2008-01-14  Ingo Renner  <ingo@typo3.org>

	* fixed #6932: Unlike the default preview language, fields of additionalPreviewLanguages are shown if they are empty. credits Helmut Ummel

2008-01-11  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* htmlArea RTE: Update manual and version to 1.6.4dev

2008-01-11  Oliver Hader  <oh@inpublica.de>
