@@ -7,6 +7,7 @@
 	* added feature #5536: Some Hooks for tslib_content
 	* added feature #7161: create a shortcut manager to delegate calls to create a new shortcut to the right target
 	* added the shortcut menu, part of the cleaner backend project
+	* added feature #7163: Make backend.php the default backend
 
 2008-01-15  Benjamin Mack  <mack@xnos.org>
 
